--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     {% tailwind_css %}
+    <!-- Alpine.js for Combobox functionality -->
+    <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
 </head>
 <body class="bg-gray-50 text-black font-serif leading-normal tracking-normal">
     <!-- Header -->
@@ -46,9 +48,9 @@
                 <a href="#" class="font-medium nav-link" style="color: #555B6E;">About</a>
             </nav>
             <div class="hidden lg:flex items-center space-x-2 lg:space-x-4 ml-auto">
-                <a href="#" class="text-sm font-medium" style="color: #89B0AE;">Login</a>
+                <a href="/users/login/" class="text-sm font-medium" style="color: #89B0AE;">Login</a>
                 {% if request.path != '/users/register/' %}
-                <a href="/users/register/" class="px-4 py-2 rounded font-semibold text-sm signup-btn" style="background-color: #FF9950; color: #fff;">Sign Up</a>
+                <a href="/subscribe/" class="px-4 py-2 rounded font-semibold text-sm signup-btn" style="background-color: #FF9950; color: #fff;">Get Started</a>
                 {% endif %}
             </div>
             <!-- Mobile nav dropdown -->
@@ -61,9 +63,9 @@
                     <a href="#" class="font-medium nav-link" style="color: #555B6E;">Pricing</a>
                     <a href="#" class="font-medium nav-link" style="color: #555B6E;">About</a>
                     <div class="flex flex-col gap-2 mt-2">
-                        <a href="#" class="text-sm font-medium" style="color: #89B0AE;">Login</a>
+                        <a href="/users/login/" class="text-sm font-medium" style="color: #89B0AE;">Login</a>
                         {% if request.path != '/users/register/' %}
-                        <a href="/users/register/" class="px-4 py-2 rounded font-semibold text-sm text-center signup-btn" style="background-color: #FF9950; color: #fff;">Sign Up</a>
+                        <a href="/subscribe/" class="px-4 py-2 rounded font-semibold text-sm text-center signup-btn" style="background-color: #FF9950; color: #fff;">Get Started</a>
                         {% endif %}
                     </div>
                 </nav>
