--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -48,9 +48,16 @@
                 <a href="#" class="font-medium nav-link" style="color: #555B6E;">About</a>
             </nav>
             <div class="hidden lg:flex items-center space-x-2 lg:space-x-4 ml-auto">
-                <a href="/users/login/" class="text-sm font-medium" style="color: #89B0AE;">Login</a>
-                {% if request.path != '/users/register/' %}
-                <a href="/subscribe/" class="px-4 py-2 rounded font-semibold text-sm signup-btn" style="background-color: #FF9950; color: #fff;">Get Started</a>
+                {% if request.user.is_authenticated %}
+                    <a href="/users/logout/" class="text-sm font-medium" style="color: #89B0AE;">Logout</a>
+                    {% if request.path != '/users/profile-wizard/' %}
+                        <a href="/users/profile/" class="px-4 py-2 rounded font-semibold text-sm signup-btn" style="background-color: #FF9950; color: #fff;">Profile</a>
+                    {% endif %}
+                {% else %}
+                    <a href="/users/login/" class="text-sm font-medium" style="color: #89B0AE;">Login</a>
+                    {% if request.path != '/users/register/' %}
+                        <a href="/subscribe/" class="px-4 py-2 rounded font-semibold text-sm signup-btn" style="background-color: #FF9950; color: #fff;">Get Started</a>
+                    {% endif %}
                 {% endif %}
             </div>
             <!-- Mobile nav dropdown -->
@@ -63,9 +70,16 @@
                     <a href="#" class="font-medium nav-link" style="color: #555B6E;">Pricing</a>
                     <a href="#" class="font-medium nav-link" style="color: #555B6E;">About</a>
                     <div class="flex flex-col gap-2 mt-2">
-                        <a href="/users/login/" class="text-sm font-medium" style="color: #89B0AE;">Login</a>
-                        {% if request.path != '/users/register/' %}
-                        <a href="/subscribe/" class="px-4 py-2 rounded font-semibold text-sm text-center signup-btn" style="background-color: #FF9950; color: #fff;">Get Started</a>
+                        {% if request.user.is_authenticated %}
+                            <a href="/users/logout/" class="text-sm font-medium" style="color: #89B0AE;">Logout</a>
+                            {% if request.path != '/users/profile-wizard/' %}
+                                <a href="/users/profile/" class="px-4 py-2 rounded font-semibold text-sm text-center signup-btn" style="background-color: #FF9950; color: #fff;">Profile</a>
+                            {% endif %}
+                        {% else %}
+                            <a href="/users/login/" class="text-sm font-medium" style="color: #89B0AE;">Login</a>
+                            {% if request.path != '/users/register/' %}
+                                <a href="/subscribe/" class="px-4 py-2 rounded font-semibold text-sm text-center signup-btn" style="background-color: #FF9950; color: #fff;">Get Started</a>
+                            {% endif %}
                         {% endif %}
                     </div>
                 </nav>
