--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -41,7 +41,7 @@
             <!-- Desktop nav centered absolutely -->
             <nav class="hidden lg:flex absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2 flex-wrap gap-4 lg:space-x-6 lg:gap-0 mx-auto justify-center">
                 <a href="/" class="font-medium nav-link" style="color: #555B6E;">Home</a>
-                <a href="#" class="font-medium nav-link" style="color: #555B6E;">Therapists</a>
+                <a href="/therapists/" class="font-medium nav-link" style="color: #555B6E;">Therapists</a>
                 <a href="/blog/" class="font-medium nav-link" style="color: #555B6E;">Blog</a>
                 <a href="#" class="font-medium nav-link" style="color: #555B6E;">Features</a>
                 <a href="#" class="font-medium nav-link" style="color: #555B6E;">Pricing</a>
@@ -64,7 +64,7 @@
             <div id="mobile-menu" class="lg:hidden hidden w-full mt-2">
                 <nav class="flex flex-col gap-2 bg-white rounded shadow p-4 items-center text-center">
                     <a href="/" class="font-medium nav-link" style="color: #555B6E;">Home</a>
-                    <a href="#" class="font-medium nav-link" style="color: #555B6E;">Therapists</a>
+                    <a href="/therapists/" class="font-medium nav-link" style="color: #555B6E;">Therapists</a>
                     <a href="/blog/" class="font-medium nav-link" style="color: #555B6E;">Blog</a>
                     <a href="#" class="font-medium nav-link" style="color: #555B6E;">Features</a>
                     <a href="#" class="font-medium nav-link" style="color: #555B6E;">Pricing</a>
