--- a/templates/partials/therapist_card.html
+++ b/templates/partials/therapist_card.html
@@ -1,5 +1,5 @@
 {# Therapist Card Partial - Use with therapist context variable #}
-<div class="rounded-xl shadow-lg p-6 flex flex-col md:flex-row items-center w-full mb-6" style="background-color: #FAF9F9; color: #555B6E;">
+<div class="rounded-2xl shadow-lg p-10 sm:p-14 flex flex-col md:flex-row items-center w-full mb-8" style="background-color: #FAF9F9; color: #555B6E;">
   <div class="flex-shrink-0">
     {% if therapist.profile_photo %}
       <img src="{{ therapist.profile_photo.url }}" alt="{{ therapist.first_name }} {{ therapist.last_name }}" class="w-32 h-32 rounded-full object-cover shadow mb-4 md:mb-0 md:mr-6" style="box-shadow: 0 0 8px 1px #555B6E44;" />
