--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -43,9 +43,9 @@
                 <a href="/" class="font-medium nav-link{% if request.path == '/' %} active-nav{% endif %}" style="color: {% if request.path == '/' %}#FF9950{% else %}#555B6E{% endif %};">Home</a>
                 <a href="/therapists/" class="font-medium nav-link{% if request.path|slice:':12' == '/therapists/' %} active-nav{% endif %}" style="color: {% if request.path|slice:':12' == '/therapists/' %}#FF9950{% else %}#555B6E{% endif %};">Therapists</a>
                 <a href="{% url 'blog_index' %}" class="font-medium nav-link{% if request.path|slice:':6' == '/blog/' %} active-nav{% endif %}" style="color: {% if request.path|slice:':6' == '/blog/' %}#FF9950{% else %}#555B6E{% endif %};">Blog</a>
-                <a href="#" class="font-medium nav-link" style="color: #555B6E;">Features</a>
-                <a href="#" class="font-medium nav-link" style="color: #555B6E;">Pricing</a>
-                <a href="#" class="font-medium nav-link" style="color: #555B6E;">About</a>
+                <a href="/features/" class="font-medium nav-link{% if request.path|slice:':9' == '/features' %} active-nav{% endif %}" style="color: {% if request.path|slice:':9' == '/features' %}#FF9950{% else %}#555B6E{% endif %};">Features</a>
+                <a href="/pricing/" class="font-medium nav-link{% if request.path|slice:':8' == '/pricing' %} active-nav{% endif %}" style="color: {% if request.path|slice:':8' == '/pricing' %}#FF9950{% else %}#555B6E{% endif %};">Pricing</a>
+                <a href="/about/" class="font-medium nav-link{% if request.path|slice:':6' == '/about' %} active-nav{% endif %}" style="color: {% if request.path|slice:':6' == '/about' %}#FF9950{% else %}#555B6E{% endif %};">About</a>
             </nav>
             <div class="hidden lg:flex items-center space-x-2 lg:space-x-4 ml-auto">
                 {% if request.user.is_authenticated %}
